--- a/html/navigate.html
+++ b/html/navigate.html
@@ -35,7 +35,7 @@
             <li class="nav-item">
               <a class="nav-link" 
                  ui-sref="about">
-                <i class="fa-solid fa-handshake fa-lg me-1"></i>
+                <i class="fa-solid fa-hand fa-lg me-1"></i>
                 <span class="text-capitalize text-small-caps">
                   {{'about' | translate:lang.data}}
                 </span>
