chevron on title bounceing

--- a/html/about.html
+++ b/html/about.html
@@ -17,6 +17,7 @@
     <div class="backdrop-filter-element"></div>
     <div class="home-content">
       <h1 id="abut">EcoGourmet</h1>
+      <i class="fa-solid fa-chevron-down fa-bounce" style="font-size: larger;"></i>
     </div>
   </div>
 
