Landing changes to text

--- a/html/about.html
+++ b/html/about.html
@@ -201,6 +201,7 @@
              <div class="rounded-circle overflow-hidden mx-auto" 
                   style="width: 150px; height: 150px;">
                <img class="img-fluid rounded-circle mb-3" 
+                    style="border-radius: 50%;"
                     ng-src="{{ testimonial.kep_url }}" 
                     alt="..." />
              </div>
