--- a/html/navigate.html
+++ b/html/navigate.html
@@ -113,7 +113,7 @@
             </tr>
             <tr>
               <td colspan="3">Összesen:</td>
-              <td>{{ getTotalPrice() }}</td>
+              <td>{{ getTotalPrice() }}Ft</td>
               <td></td>
             </tr>
           </tbody>
