--- a/html/products.html
+++ b/html/products.html
@@ -107,7 +107,7 @@
 
     <!-- Termék kártyák -->
     <div class="col-md-9">
-      <section class="py-5" 
+      <section class="py-5 &"
                style="background-color: #f8f9fa;">
         <div class="col-md-9 mx-auto">
 
