--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./css/app.css">
 
 </head>
-<body ng-app="app">
+<body ng-app="app" ng-controller="appController">
   
   <!-- Application container -->
 	<ui-view id="app-container"></ui-view>
