changes to services page

--- a/html/services.html
+++ b/html/services.html
@@ -1,5 +1,25 @@
-<!-- Page container -->
-<div class="page-container d-conditional vh-100">
-
-    <!-- Navigate -->
-    <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
+<div class="page-container vh-100">
+    <header class="sticky-top" ng-include="'./html/navigate.html'"></header>
+  
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+    <div class="unique-page" ng-app="app" ng-controller="MainController">
+      <div class="container">
+        <div class="slide">
+          <div class="item" ng-repeat="location in locations" ng-style="{'background-image': 'url(' + location.image + ')'}">
+            <div class="content">
+              <div class="name">{{ location.name }}</div>
+              <div class="des">{{ location.description }}</div>
+              <button>See More</button>
+            </div>
+          </div>
+        </div>
+        <div class="button">
+          <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
+          <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+      </div>
+    </div>
