small changes to profile and login

--- a/html/services.html
+++ b/html/services.html
@@ -1,12 +1,7 @@
 <div class="page-container vh-100">
-    <header class="sticky-top" ng-include="'./html/navigate.html'"></header>
+    <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
   
-    <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
-    <div class="unique-page" ng-app="app" ng-controller="MainController">
+    <div class="unique-page">
       <div class="container">
         <div class="slide">
           <div class="item" ng-repeat="location in locations" ng-style="{'background-image': 'url(' + location.image + ')'}">
