--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./css/app.css">
 
 </head>
-<body ng-app="app" ng-controller="appController">
+<body ng-app="app">
   
   <!-- Application container -->
 	<ui-view id="app-container"></ui-view>
@@ -31,9 +31,6 @@
     <script src="../../common/js/form-angular.js"></script>
     <script src="../../components/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
-
-
-    <!-- <script src="./js/common.js"></script> -->
 
   </div>
 </body>
