--- a/html/navigate.html
+++ b/html/navigate.html
@@ -5,7 +5,7 @@
   <div class="container-fluid">
 
     <!--  Home (landing) -->
-    <a class="navbar-brand" ui-sref="home">Ecogrourmet</a>
+    <a class="navbar-brand" ui-sref="home">Ecogourmet</a>
 
     <!-- Hamburger icon -->
     <button class="navbar-toggler" 
