--- a/html/products.html
+++ b/html/products.html
@@ -153,7 +153,7 @@
           <div class=" d-flex justify-content-center">
             <div class="d-grid">
               <a class="btn btn-outline-primary" 
-              ng-click="addToCart(product)">
+              ng-click="addToCart(subscription_plan)">
                {{ 'Cart' | translate:lang.data}}</a>
             </div>
           </div>
