--- a/html/about.html
+++ b/html/about.html
@@ -50,7 +50,7 @@
    </section>
 
   <!-- pricing cards -->
-  <section class="bg-light py-5">
+  <!-- <section class="bg-light py-5">
     <div class="container px-5 my-5">
       <div class="text-center mb-5">
         <h2 class="fw-bolder">Velünk minden lehetséges!</h2>
@@ -83,7 +83,7 @@
         {{ 'DISCOVER_MORE' | translate:lang.data }}
       </a>
     </div>
-  </section>
+  </section> -->
 
 
    <!--sub-nav with menu-->
