--- a/html/navigate.html
+++ b/html/navigate.html
@@ -115,6 +115,7 @@
                     <li class="nav-item">
                       <a class="nav-link btn btn-success" 
                          ng-click="finalizeOrder()"
+                         ng-class="{'disabled': !user.id}"
                          ng-disabled="!user.id">
                         <i class="fas fa-shopping-cart me-1"></i>
                         Vásárlás
