--- a/html/products.html
+++ b/html/products.html
@@ -72,7 +72,7 @@
                 <div class="card-footer bg-transparent">
                   <div>
                     <a class="btn btn-outline-dark mt-auto" 
-                    ng-click="addToCart(product)">
+                    ng-click="addToCart(product, 'shop')">
                     {{ 'Cart' | translate:lang.data}}
                     </a>
                   </div>
@@ -153,7 +153,7 @@
           <div class=" d-flex justify-content-center">
             <div class="d-grid">
               <a class="btn btn-outline-primary" 
-              ng-click="addToCart(subscription_plan)">
+              ng-click="addToCart(plan, 'plan')">
                {{ 'Cart' | translate:lang.data}}</a>
             </div>
           </div>
